# Pytimer

./: README.md  pyproject.toml
pytimer/: __init__.py  decorators.py
